--- a/.gitignore
+++ b/.gitignore
@@ -30,8 +30,12 @@ yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
-# env files (can opt-in for committing if needed)
-.env*
+# env files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # vercel
 .vercel
@@ -39,3 +43,20 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# database
+*.db
+*.sqlite
+/prisma/dev.db
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+/venv
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
