--- a/package.json
+++ b/package.json
@@ -6,18 +6,39 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "seed": "node prisma/seed.js",
+    "reset-db": "node prisma/reset-and-seed.js",
+    "db-push": "prisma db push",
+    "db-studio": "prisma studio"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^6.4.1",
+    "@tailwindcss/typography": "^0.5.16",
+    "axios": "^1.7.9",
+    "framer-motion": "^12.4.7",
+    "next": "15.1.7",
+    "next-auth": "^4.24.11",
+    "next-pwa": "^5.6.0",
+    "pg": "^8.13.3",
+    "prisma": "^6.4.1",
     "react": "^19.0.0",
+    "react-avatar-editor": "^13.0.2",
     "react-dom": "^19.0.0",
-    "next": "15.1.7"
+    "react-hot-toast": "^2.5.2",
+    "react-markdown": "^10.0.0",
+    "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "@eslint/eslintrc": "^3",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
-    "@eslint/eslintrc": "^3"
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17"
+  },
+  "prisma": {
+    "seed": "node prisma/seed.js"
   }
 }
