安全修復: 移除硬編碼的數據庫連接字符串，改用環境變數

--- a/.env.example
+++ b/.env.example
@@ -5,25 +5,25 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 # PostgreSQL 資料庫配置
-DATABASE_URL="postgresql://postgres:password@localhost:5432/mychatdb"
+DATABASE_URL=postgresql://username:password@hostname:port/database?sslmode=require
 
 # Google OAuth 配置
-GOOGLE_CLIENT_ID=your_google_client_id
-GOOGLE_CLIENT_SECRET=your_google_client_secret
-GOOGLE_REDIRECT_URI=http://localhost:3000/api/auth/callback/google
+GOOGLE_CLIENT_ID=your-client-id-here
+GOOGLE_CLIENT_SECRET=your-client-secret-here
+GOOGLE_REDIRECT_URI=https://your-domain.com/api/auth/callback/google
 
 # 其他配置
-NEXTAUTH_URL=http://localhost:3000
-NEXTAUTH_SECRET=your_nextauth_secret
-NEXT_PUBLIC_API_URL=http://localhost:8000
+NEXTAUTH_URL=https://your-domain.com
+NEXTAUTH_SECRET=your-secret-here
+NEXT_PUBLIC_API_URL=https://your-api-domain.com
 
 # pgAdmin 配置 (如果使用)
 PGADMIN_DEFAULT_EMAIL=admin@example.com
 PGADMIN_DEFAULT_PASSWORD=your_pgadmin_password
 
 # NextAuth 配置
-NEXTAUTH_URL=http://localhost:3000
-NEXTAUTH_SECRET=your_nextauth_secret
+NEXTAUTH_URL=https://your-domain.com
+NEXTAUTH_SECRET=your-secret-here
 
 # OAuth 提供者 - GitHub (可選)
 # GITHUB_ID=your_github_id
@@ -31,7 +31,7 @@ NEXTAUTH_SECRET=your_nextauth_secret
 
 # 後端API配置
 BACKEND_API_URL=http://localhost:8000
-BACKEND_API_KEY=your_secure_backend_api_key
+BACKEND_API_KEY=your-backend-api-key-here
 
 # 默認模型設置
 DEFAULT_MODEL=gemini
